--- a/example/partials/head.html
+++ b/example/partials/head.html
@@ -2,6 +2,6 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <include src="./title.html" title="{{props.title}}" />
-  <include src="../upper.html" />
+  <include src="./title.html" title="{{props.title+props.title}}" />
+  <include src="../upper.html" myProp="{{props.title}}" />
 </head>
