fix: compileTemplate & runExpression

--- a/example/partials/card.html
+++ b/example/partials/card.html
@@ -5,7 +5,7 @@
       <p>{{props.desc}}</p>
     </div>
     <div class="card-action">
-      <a href="{{props.linkHref}}">{{props.linkText}}</a>
+      <a href="#">{{props.linkText}}</a>
     </div>
   </div>
 </div>
