--- a/example/partials/head.html
+++ b/example/partials/head.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <include src="./title.html" title="{{props.title + '-' + props.title}}" />
+  <include src="./title.html" title="{{`${props.title} - ${props.title}`}}" />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
