feat: added support for slots

--- a/example/partials/card.html
+++ b/example/partials/card.html
@@ -3,6 +3,7 @@
     <div class="card-content white-text">
       <span class="card-title">{{props.title}}</span>
       <p>{{props.desc}}</p>
+      <slot></slot>
     </div>
     <div class="card-action">
       <a href="#">{{props.linkText}}</a>
