fix: improve path resolve by only resolving absolute paths

--- a/example/partials/layout.html
+++ b/example/partials/layout.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <include src="./head.html" title='{{"Cool" + "Page"}}' />
+  <include src="partials/head.html" title='{{"Cool" + "Page"}}' />
   <body>
-    <include src="./navbar.html" />
+    <include src="partials/navbar.html" />
 
     <slot></slot>
   </body>
