feat: added support for default slot content

--- a/example/partials/layout.html
+++ b/example/partials/layout.html
@@ -4,6 +4,8 @@
   <body>
     <include src="partials/navbar.html" />
 
-    <slot></slot>
+    <slot>
+      <p>some default content</p>
+    </slot>
   </body>
 </html>
