--- a/example/partials/navbar.html
+++ b/example/partials/navbar.html
@@ -5,6 +5,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="pages/nested/about.html">About</a></li>
       <li><a href="pages/team.html">Team</a></li>
+      <li><a href="pages/slot-test.html">Slot</a></li>
     </ul>
   </div>
 </nav>
