--- a/example/partials/card.html
+++ b/example/partials/card.html
@@ -2,7 +2,7 @@
   <div class="card blue-grey darken-1">
     <div class="card-content white-text">
       <span class="card-title">{{props.title}}</span>
-      <p>{{props.desc}}</p>
+      <p hashid="desc">{{props.desc}}</p>
       <slot></slot>
     </div>
     <div class="card-action">
@@ -10,3 +10,10 @@
     </div>
   </div>
 </div>
+
+<script>
+  const desc = getElementByHashId("desc");
+  desc.addEventListener("click", () => {
+    desc.innerHTML = props.title;
+  });
+</script>
