--- a/example/partials/head.html
+++ b/example/partials/head.html
@@ -10,4 +10,5 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
   />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
