--- a/example/partials/layout.html
+++ b/example/partials/layout.html
@@ -4,8 +4,10 @@
   <body>
     <include src="partials/navbar.html" />
 
-    <slot>
-      <p>some default content</p>
-    </slot>
+    <div class="p-4">
+      <slot>
+        <p>some default content</p>
+      </slot>
+    </div>
   </body>
 </html>
