chore: fix watch mode

--- a/examples/advanced/partials/counter.html
+++ b/examples/advanced/partials/counter.html
@@ -1,7 +1,7 @@
-<span>
-  <button hashid="dec-btn">-</button>
+<span class="flex gap-2 items-center mt-2">
+  <button hashid="dec-btn" class="btn">-</button>
   <span hashid="count">{{props.count}}</span>
-  <button hashid="inc-btn">+</button>
+  <button hashid="inc-btn" class="btn">+</button>
 </span>
 
 <script>
